--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-view-overflow",
+  "name": "@react-native-oh-tpl/react-native-view-overflow",
   "description": "solve view overflow in android",
-  "version": "0.0.5",
+  "version": "0.0.5-0.0.1",
   "author": "entria",
   "homepage": "https://github.com/entria/react-native-view-overflow",
   "keywords": [
@@ -21,5 +21,8 @@
     "release:minor": "npm version minor && git push origin && git push origin --follow-tags",
     "release:patch": "npm version patch && git push origin && git push origin --follow-tags",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "harmony": {
+	  "alias": "react-native-view-overflow"
   }
 }
